crates/vaab-vm/tests/snapshots/bytecode__a_feature_a_later_phase_brings_compiles_to_one_instruction.snap
---
source: crates/vaab-vm/tests/bytecode.rs
expression: "listing(\"print(read_file(\\\"notes.txt\\\"))\\n\")"
---
body 0: the top level — 0 slots, 0 parameters
    0  NotYet (`read_file` arrives in phase 5)
    1  Builtin print
    2  Return
