crates/vaab-vm/tests/snapshots/bytecode__a_file_of_one_print_is_three_instructions.snap
---
source: crates/vaab-vm/tests/bytecode.rs
expression: "listing(\"print(1)\\n\")"
---
body 0: the top level — 0 slots, 0 parameters
    0  Int(1)
    1  Builtin print
    2  Return
