crates/vaab-vm/tests/snapshots/bytecode__a_function_gets_a_body_of_its_own.snap
---
source: crates/vaab-vm/tests/bytecode.rs
expression: "listing(\"to double(n: Int) returns Int = n * 2\\nprint(double(4))\\n\")"
---
body 0: the top level — 0 slots, 0 parameters
    0  Constant 0 (`double`)
    1  Int(4)
    2  Call(1)
    3  Builtin print
    4  Return

body 1: `double` — 1 slot, 1 parameter
    0  LoadLocal(0)
    1  Int(2)
    2  Multiply
    3  Return
